# hype-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  CRYPTO_SECURITY_TESTS.md  Cargo.toml  DIRECT_FILE_FALLBACK.md  EXECUTIVE_SUMMARY.txt  HOMEBREW_SETUP.md  HTTP_FEATURE_IMPLEMENTATION_ANALYSIS.md  HTTP_GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PRP-007.md  IMPLEMENTATION_SUMMARY_PRP-008.md  IMPLEMENTATION_SUMMARY_PRP-010.md  IMPLEMENTATION_SUMMARY_PRP-011.md  PRP-008_COMPLETION_SUMMARY.md  README.md  RELEASE_SUMMARY_v0.1.2.md  RELEASE_v0.4.2.md  ROADMAP.md  TLS_FIX_SUMMARY.md  VISION.md  foo.lua  homebrew-update.sh  install.sh  test_args.lua  test_args_advanced.lua  test_args_compatibility.lua  test_args_help.lua  test_args_simple.lua  test_comprehensive.lua  test_debug_args.lua  test_demo.lua  test_environment_basic.lua  test_environment_security.lua  test_environment_write.lua  test_timeout.lua
.github/: CONTRIBUTING.md  RELEASE_TEMPLATE.md
.github/workflows/: release.yml
PRPs/: MODULE_SYSTEM_OVERVIEW.md  fs-module-implementation-prp.md  global-install-prp.md  http-advanced-features-prp.md  http-cookie-support-prp.md  http-lua-bindings-prp.md  http-module-prp.md  http-url-encoding-fix-prp.md  hype-modules-rename-prp.md  hype-rs-prp.md  llm-agent-documentation-prp.md  module-system-prp.md  release-automation-prp.md  repository-cleanup-prp.md  stdlib-roadmap-prp.md
benches/: BENCHMARKS.md  QUICK_START.md  module_benchmarks.rs
docs/: MIGRATION_HYPE_MODULES.md  README.md  performance.md  release-process.md  testing.md
docs/api/: QUICK_REFERENCE.md  README.md  crypto.md  fs.md  json.md  os.md  process.md  querystring.md  string.md  test-examples.lua  time.md  url.md
docs/archive/: HTTP_LUA_BINDINGS_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_3_EXECUTION_PLAN.md  PHASE_4_COMPLETION.md  PHASE_4_EXECUTION_PLAN.md  PHASE_5_COMPLETION.md  PHASE_5_EXECUTION_PLAN.md  README.md
docs/features/: global-install.md
docs/modules/: README.md  builtin-modules.md  getting-started.md  http-api.md  require-api.md
examples/: basic-app.lua  crypto-demo.lua  direct-file-fallback.lua  file-operations-new.lua  file-operations.lua  http-demo.lua  http-lua-demo.lua  http_demo_rust.rs  http_simple_demo.rs  json-demo.lua  module-basic-require.lua  module-custom-module.lua  module-dependencies.lua  module-path-operations.lua  os-demo.lua  process-demo.lua  querystring-demo.lua  string-demo.lua  time-demo.lua  url-demo.lua
examples/cli-tool/: README.md  hype.json
examples/package-app/: README.md  app.lua  hype.json
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  install.rs  mod.rs  parser.rs  validation.rs
src/config/: mod.rs
src/engine/: executor.rs  (+4 more)
tests/: advanced_unit_tests.rs  cli_module_test.rs  crypto_module_test.rs  crypto_security_test.rs  edge_cases_test.rs  fs_operations_test.rs  global_install_test.rs  http_advanced_features_test.rs  http_cookie_test.rs  http_url_encoding_test.rs  json_edge_cases_test.rs  json_extreme_cases_test.rs  json_module_test.rs  module_system_integration_test.rs  os_module_test.rs  process_module_test.rs  querystring_module_test.rs  stress_test.rs  string_module_test.rs  time_module_test.rs  url_module_test.rs
(+116 files in other folders)
