[package]
name = "hype-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance Lua scripting engine with CLI interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/hype-rs"
homepage = "https://github.com/yourusername/hype-rs"
keywords = ["lua", "scripting", "cli", "engine"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

[features]
default = []
async = ["tokio"]

[[bin]]
name = "hype"
path = "src/main.rs"

[[bench]]
name = "module_benchmarks"
path = "benches/module_benchmarks.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
