[package]
name = "hype-rs"
version = "0.4.2"
edition = "2021"
authors = ["Tom Wilson <tom@twilson63.com>"]
description = "A high-performance Lua scripting engine with CLI interface and package management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/twilson63/hype-rs"
homepage = "https://github.com/twilson63/hype-rs"
keywords = ["lua", "scripting", "cli", "engine", "package-manager"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls", "cookies", "multipart"], default-features = false, optional = true }
url = "2.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
chrono = "0.4"
base64 = "0.21"
serde_urlencoded = "0.7"
sysinfo = "0.30"
percent-encoding = "2.3"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
rand = "0.8"
bcrypt = "0.15"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }

[features]
default = ["http"]
async = ["tokio"]
http = ["reqwest", "tokio"]

[[bin]]
name = "hype"
path = "src/main.rs"

[[bench]]
name = "module_benchmarks"
path = "benches/module_benchmarks.rs"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

# cargo-dist configuration
[workspace.metadata.dist]
cargo-dist-version = "0.8.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
]
pr-run-mode = "plan"

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
x86_64-apple-darwin = "macos-13"
